--- a/Magazyn 2022/Magazyn 2022.csproj
+++ b/Magazyn 2022/Magazyn 2022.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <RootNamespace>Magazyn_2022</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
